Styling fixes for CV.
- FIX: prevent line-breaks in tags and correctly space between them when there are multiple lines (usually on mobile)
- Removed whitespace between tags, only use margins to space elements apart
- FIX: make sure the content portion from markdown is rendered in `prose`, so links are visible
- changed how education title and year are rendered to be more inline with how jobs are rendered
- added some more vertical space to job/education entries

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -52,7 +52,7 @@
 
 @layer components {
   .tag {
-    @apply py-1 px-1;
+    @apply py-0.5 px-2;
     @apply border-b-2 border-b-accent;
     @apply border-r-2 border-r-accent;
     @apply border-t-1 border-t-accent/50;
